actualización fecha birmania

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -16,9 +16,10 @@
         <br>
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/events/461483437571767/" target="_blank" class="quitar">
-                <span class="textocategorias2">Atentos que se vienen mas novedades!</span>
-                Proximamente
+            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
+                <span class="textocategorias2">Birmania bar | Cabrera 5115 | 21 hs | CABA|</span>
+                Entrada gratis
+                <img src="/imagenes/flyers/birmania2.jpg" alt="">
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
