--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -18,8 +18,8 @@
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
                 <span class="textocategorias2">Birmania bar | Cabrera 5115 | 21 hs | CABA|</span>
-                Entrada gratis
-                <img src="/imagenes/flyers/birmania2.jpg" alt="">
+                Entrada gratis <br>
+                <img src="/imagenes/flyers/birmania2.jpg" style="width:360px">
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
