agregada fecha araoz

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -25,6 +25,16 @@
         </div>
         <br>
 
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
+                <span class="textocategorias2">Club Araoz | Araoz 2424 | 22 hs | CABA|</span>
+                Entrada gratis <br>
+                <img src="/imagenes/flyers/clubaraoz.jpg" style="width:360px">
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+        <br>
+
 
     </body>
 </html>
