link de instagram correccion

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -94,7 +94,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
-                <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                <a href="https://www.instagram.com/buenacosechabanda" target="_blank">
                     <i id="social-in" class="fa fa-instagram fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
