actualizacion pos birmania

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,6 +14,15 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="birmania2" class="quitar">
+                <span class="textodescripcion">Birmania Bar | 22 hs | CABA|</span>
+                <span class="texttercernivel">6 de Marzo de 2018</span>
+                <img src="/imagenes/flyers/birmania2.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+
+        <div class="w3-container w3-hoverable">
             <a href="fusion" class="quitar">
                 <span class="textodescripcion">Fusion Bar | 23 hs | CABA|</span>
                 <span class="texttercernivel">30 de Diciembre de 2017</span>
