--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -17,9 +17,9 @@
 
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
-                <span class="textocategorias2">Club Araoz | Araoz 2424 | 17 de marzo | 22 hs | CABA|</span>
+                <span class="textocategorias2">Ultra Bar | San Martin 678 | 17 de marzo | 22 hs | CABA |</span>
                 Entrada $100 <br>
-                <img src="/imagenes/flyers/clubaraoz.jpg" style="width:360px">
+                <img src="/imagenes/flyers/ultrabar.jpg" style="width:360px">
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
