--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -16,8 +16,8 @@
 
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
-                <span class="textocategorias2">Ultra Bar | San Martin 678 | 17 de marzo | 22 hs | CABA |</span>
+            <a href="https://www.facebook.com/events/161259464551321/" target="_blank" class="quitar">
+                <span class="textocategorias2">Ultra Bar | San Martin 678 | 12 de mayo | 19 hs | CABA |</span>
                 Entrada $100 <br>
                 <img src="/imagenes/flyers/ultrabar.jpg" style="width:360px">
                 <i class="material-icons">priority_high</i>
