--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="mySlides  w3-display-container">
-            <img src="/imagenes/galeria/fechas/makena9-12/band1.jpg" class="w3-animate-bottom" style="width:100%">
+            <img src="/imagenes/flyers/konex.jpg" class="w3-animate-bottom" style="width:100%">
             <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                 Buena Cosecha !
             </div>
