--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -16,10 +16,10 @@
 
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/events/161259464551321/" target="_blank" class="quitar">
-                <span class="textocategorias2">Ultra Bar | San Martin 678 | 12 de mayo | 19 hs | CABA |</span>
-                Entrada $100 <br>
-                <img src="/imagenes/flyers/ultrabar.jpg" style="width:360px">
+            <a href="https://www.facebook.com/events/223042901823755/" target="_blank" class="quitar">
+                <span class="textocategorias2">C.C. Konex | Sarmiento 3131 | 7 de Julio | 23:30 hs | CABA |</span>
+                Entrada $150 <br>
+                <img src="/imagenes/flyers/konex.jpg" style="width:360px">
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
