--- a/views/layout.erb
+++ b/views/layout.erb
@@ -68,37 +68,37 @@
                 </a>
             </li> -->
 
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                     <i id="social-fb" class="fa fa-facebook-square fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
                     <i id="social-sp" class="fa fa-spotify fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
                     <i id="social-sc" class="fa fa-soundcloud fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://www.twitter.com/buenacosechaska" target="_blank">
                     <i id="social-tw" class="fa fa-twitter-square fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                     <i id="social-yt" class="fa fa-youtube-play fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="https://www.instagram.com/buenacosechabanda" target="_blank">
                     <i id="social-in" class="fa fa-instagram fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-center">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
                 <a href="mailto:contacto@buenacosecha.musica.ar?subject=contacto" target="_blank">
                     <i id="social-em" class="fa fa-envelope-square fa-5x social" style="font-size:20px"></i>
                 </a>
