--- a/views/layout.erb
+++ b/views/layout.erb
@@ -68,12 +68,12 @@
                 </a>
             </li> -->
 
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
+            <li class="w3-hide-small w3-hide-medium w3-padding">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                     <i id="social-fb" class="fa fa-facebook-square fa-5x social" style="font-size:20px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-centered">
+            <li class="w3-hide-small w3-hide-medium w3-padding">
                 <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
                     <i id="social-sp" class="fa fa-spotify fa-5x social" style="font-size:20px"></i>
                 </a>
