--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,6 +14,15 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="konex" class="quitar">
+                <span class="textodescripcion">Konex | 23 hs | CABA|</span>
+                <span class="texttercernivel">14 de Julio de 2018</span>
+                <img src="/imagenes/flyers/konex.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+
+        <div class="w3-container w3-hoverable">
             <a href="ultrabar" class="quitar">
                 <span class="textodescripcion">Ultrabar | 23 hs | CABA|</span>
                 <span class="texttercernivel">12 de Mayo de 2018</span>
