--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -81,11 +81,11 @@
                         <img src="/imagenes/perfil/leoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
                 <div class="w3-third">
-                    <a href="https://www.facebook.com/guillermo.dunand" class="quitar" target="_blank">
-                        <p>Guille
+                    <a href="https://www.facebook.com/SebaSV7" class="quitar" target="_blank">
+                        <p>Seba
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
-                        <img src="/imagenes/perfil/guilleperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <img src="/imagenes/perfil/sebaperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
             </div>
 
