--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -17,9 +17,7 @@
 
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/223042901823755/" target="_blank" class="quitar">
-                <span class="textocategorias2">C.C. Konex | Sarmiento 3131 | 7 de Julio | 23:30 hs | CABA |</span>
-                Entrada $150 <br>
-                <img src="/imagenes/flyers/konex.jpg" style="width:360px">
+                <span class="textocategorias2">Proximamente mas novedades !</span>
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
