--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,13 +52,13 @@
 
             <li class="w3-hide-small w3-hide-medium w3-padding w3-right">
                 <a href="javascript:void(0)">
-                    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="130" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="140" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-padding w3-right">
                 <a href="javascript:void(0)">
                     <i id="fb-root" class="fa-3x social">
-                        <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div>
+                        <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="medium" data-show-faces="false" data-share="false"></div>
                     </i>
                 </a>
             </li>
