--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
                 <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
         </div>
-        <div class="mySlides  w3-display-container">
+        <div class="mySlides  w3-display-container margin-top:24px">
             <img src="/imagenes/galeria/slide/bc.jpg" class="w3-animate-bottom" style="width:100%">
         </div>
         <!-- dejo en stand by el carrusel
