--- a/views/index.erb
+++ b/views/index.erb
@@ -14,12 +14,12 @@
     </head>
 
     <body>
-        <div class="w3-content w3-center" style="max-width:860px;margin-top:24px">
+        <div class="w3-content w3-center" style="max-width:780px;margin-top:24px">
             <div class="mySlides  w3-display-container">
                 <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
         </div>
-        <div class="mySlides  w3-display-container margin-top:24px">
+        <div class="mySlides  w3-display-container" style="margin-top:24px">
             <img src="/imagenes/galeria/slide/bc.jpg" class="w3-animate-bottom" style="width:100%">
         </div>
         <!-- dejo en stand by el carrusel
