--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,12 @@
                 <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
         </div>
-        <div class="mySlides w3-padding-16 w3-display-container"  style="margin-top:24px">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="mySlides w3-display-container">
             <img src="/imagenes/galeria/slide/bc.jpg" class="w3-animate-bottom" style="width:100%">
         </div>
         <!-- dejo en stand by el carrusel
