--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -15,6 +15,7 @@
         <div class="">
             <ul class="w3-ul w3-border">
                 <li>
+                  <div class="w3-half	">
                     <div class="w3-container w3-hoverable">
                         <a href="ultrabar2" class="quitar">
                             <span class="textodescripcion">Ultrabar2 | 23 hs | CABA|</span>
@@ -146,6 +147,8 @@
                 </div>
                 <br>
               </li>
+            </div>
+            <div class="w3-half	">
               <li>
                 <div class="w3-container w3-hoverable">
                     <a href="makena" class="quitar">
@@ -265,6 +268,7 @@
                     </a>
                 </div>
               </li>
+            </div>
             </div>
             <br>
 
