--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -19,8 +19,8 @@
                     <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:50px">
                     <div class="w3-container w3-hoverable w3-bar-item">
                         <a href="ultrabar2" class="quitar">
-                            <span class="textodescripcion">Ultrabar2 | 23 hs | CABA|</span>
-                            <span class="texttercernivel">2 de Agosto de 2018</span>
+                            <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
+                            <span>2 de Agosto de 2018</span>
                         </a>
                     </div>
                     <br>
