--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -17,7 +17,7 @@
                 <li class="w3-bar">
                     <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
                     <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:50px">
-                    <div class="w3-container w3-hoverable w3-bar-item">
+                    <div class="w3-bar-item">
                         <a href="ultrabar2">
                             <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
                             <span>2 de Agosto de 2018</span>
