--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,11 +16,19 @@
       <ul class="w3-ul w3-card-4 w3-border">
         <li class="w3-bar">
           <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
+          <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
+          <div class="w3-bar-item">
+            <span class="w3-large">Mike</span><br>
+            <span>Web Designer</span>
+          </div>
+        </li>
+        <li class="w3-bar">
+          <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
           <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:40px">
-            <div class="w3-bar-item">
-              <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
-              <span>2 de Agosto de 2018</span>
-            </div>
+          <div class="w3-bar-item">
+            <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
+            <span>2 de Agosto de 2018</span>
+          </div>
         </li>
         <li>
           <div class="w3-container w3-hoverable">
