--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,7 +13,7 @@
     <br>
     <br>
     <div class="w3-container">
-      <ul class="w3-ul w3-card-4 w3-border">
+      <ul class="w3-ul w3-card-4">
         <li class="w3-bar">
           <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
           <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
