--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
     <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
   </head>
   <body>
@@ -11,23 +10,17 @@
     <br>
     <br>
     <br>
-    <br>
+
     <div class="w3-container">
-      <ul class="w3-ul w3-card-4">
-        <li class="w3-bar">
-          <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
-          <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
-          <div class="w3-bar-item">
-            <span class="w3-large">Mike</span><br>
-            <span>Web Designer</span>
-          </div>
-        </li>
+      <ul class="w3-ul w3-card-4 w3-border">
         <li class="w3-bar">
           <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
           <img src="/imagenes/flyers/ultrabar2.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:40px">
           <div class="w3-bar-item">
-            <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
-            <span>2 de Agosto de 2018</span>
+            <a href="konex" class="quitar">
+              <span class="w3-large">Ultrabar2 | 23 hs | CABA|</span><br>
+              <span>2 de Agosto de 2018</span>
+            </a>
           </div>
         </li>
         <li>
