--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
+    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+    <title>Buena Cosecha, Ska | Recitales pasados</title>
   </head>
   <body>
     <br>
     <br>
     <br>
     <br>
-
+    <br>
     <div class="w3-container">
       <ul class="w3-ul w3-card-4 w3-border">
         <li class="w3-bar">
