--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
+        <title>Buena Cosecha, Ska | Próximos recitales</title>
     </head>
 
     <body>
