--- a/views/secciones/merchandising.erb
+++ b/views/secciones/merchandising.erb
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | Comprar merchandising</title>
+        <title>Buena Cosecha, Ska | Comprar merchandising</title>
     </head>
 
     <body>
