--- a/views/secciones/musica.erb
+++ b/views/secciones/musica.erb
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | Música
+        <title>Buena Cosecha, Ska | Música
         </title>
     </head>
 
