--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Buena Cosecha, Ska | Recitales pasados</title>
   </head>
   <body>
