--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -10,6 +10,8 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
 
         <div class="w3-container">
             <div class="textocategorias">
@@ -71,8 +73,6 @@
         </div>
         <br>
 
-
-
         <div class="w3-container">
             <div class="textocategorias">
                 Misteria
@@ -125,7 +125,6 @@
         </pre>
         </div>
         <br>
-
 
         <div class="w3-container">
             <div class="textocategorias">
@@ -195,6 +194,29 @@
 
     Hoy dame la oportunidad…
     De estar con vos un rato más…
+        </pre>
+        </div>
+        <br>
+        <div class="w3-container">
+            <div class="textocategorias">
+                Nuevos Días
+            </div>
+            <pre class="texttercernivel">
+    De los sueños me escapaba por la luz del alba. Sentimiento positivo que me invade el alma.
+    fortunado de ser libre, valorando el pan y mirándola que con un mate tienta.
+
+    Lindo verde del pasto y un ave volando. Ese vapor y compañía de un buen reggae sonando.
+    No me canso de decir lo feliz que estoy, por que sigo vivo y resistiendo.
+
+    No me verás caer babilonia.
+    Esta sonrisa y mi calma es lo que a vos te agobia.
+    Soy el ritmo de tu tempo, que marcando va, la atmósfera de de acá y quiero que sepas que.
+
+    No me verás rendido babilonia. No ganas sobre todo y ahora voy en contra.
+    Combatiendo desde adentro a tu sistema hostil, con música de acá lo manifiesto.
+
+    Siento la brisa, sumada a tu sonrisa   calma que hacia el río va.
+    Siento la brisa y más sin darme prisa, marcho.
         </pre>
         </div>
     </body>
