agragada fecha mamazuka

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -17,8 +17,8 @@
 
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/events/223042901823755/" target="_blank" class="quitar">
-                <span class="textocategorias2">Proximamente mas novedades !</span>
+            <a href="https://www.facebook.com/events/710297049310898/" target="_blank" class="quitar">
+                <span class="textocategorias2">7 de Octubre en Galpon B, junto a Mamazuka, entrada $150</span>
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
