--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -202,20 +202,27 @@
                 Nuevos Días
             </div>
             <pre class="texttercernivel">
-    De los sueños me escapaba por la luz del alba. Sentimiento positivo que me invade el alma.
-    fortunado de ser libre, valorando el pan y mirándola que con un mate tienta.
+    De los sueños me escapaba por la luz del alba.
+    Sentimiento positivo que me invade el alma.
+    Afortunado de ser libre, valorando el pan
+    y mirándola que con un mate tienta.
 
-    Lindo verde del pasto y un ave volando. Ese vapor y compañía de un buen reggae sonando.
-    No me canso de decir lo feliz que estoy, por que sigo vivo y resistiendo.
+    Lindo verde del pasto y un ave volando.
+    Ese vapor y compañía de un buen reggae sonando.
+    No me canso de decir lo feliz que estoy,
+    por que sigo vivo y resistiendo.
 
     No me verás caer babilonia.
     Esta sonrisa y mi calma es lo que a vos te agobia.
-    Soy el ritmo de tu tempo, que marcando va, la atmósfera de de acá y quiero que sepas que.
+    Soy el ritmo de tu tempo, que marcando va,
+    la atmósfera de acá y quiero que sepas que.
 
-    No me verás rendido babilonia. No ganas sobre todo y ahora voy en contra.
-    Combatiendo desde adentro a tu sistema hostil, con música de acá lo manifiesto.
+    No me verás rendido babilonia.
+    No ganas sobre todo y ahora voy en contra.
+    Combatiendo desde adentro a tu sistema hostil,
+    con música de acá lo manifiesto.
 
-    Siento la brisa, sumada a tu sonrisa   calma que hacia el río va.
+    Siento la brisa, sumada a tu sonrisa, calma que hacia el río va.
     Siento la brisa y más sin darme prisa, marcho.
         </pre>
         </div>
