--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -226,5 +226,34 @@
     Siento la brisa y más sin darme prisa, marcho.
         </pre>
         </div>
+        <br>
+        <div class="w3-container">
+            <div class="textocategorias">
+                Acusang
+            </div>
+            <pre class="texttercernivel">
+    Todo terminó así nomas,
+    no pude despedirme sin mirar atras.
+    No puedo ni pensar como te pude traicionar,
+    Cuando en mi nunca viste un tarado más.
+
+    Yo no puedo volver  a este lugar,
+    el dolor es infernal.
+    Yo no puedo volver a este lugar,
+    La tormenta pasará
+
+    Vos tenias un gran plan, hijas y casa frente al mar.
+    yo solo pude escaparme una vez mas.
+
+    Vos diste sin dudar,
+    tu luz tu alma y tu bondad,
+    vos me enseñaste lo que llamamos libertad.
+
+    El calor no pudo juntarnos,
+    el invierno ya llegó,
+    la tristeza que me invadió,
+    ya no tiene solución.
+          </pre>
+        </div>
     </body>
 </html>
