actualizacion fechas galpon y zum

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,6 +16,16 @@
       <ul class="w3-ul w3-card-4 w3-border">
         <li class="w3-bar">
           <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
+          <img src="/imagenes/flyers/zum.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:60px">
+          <div class="w3-bar-item">
+            <a href="zum" class="quitar">
+              <span class="w3-large">Galpon B | 23 hs | Jose C. Paz|</span><br>
+              <span>18 de Octubre de 2018</span>
+            </a>
+          </div>
+        </li>
+        <li class="w3-bar">
+          <span onclick="this.parentElement.style.display='none'" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
           <img src="/imagenes/flyers/galponb.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:60px">
           <div class="w3-bar-item">
             <a href="galponb" class="quitar">
