--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -87,9 +87,13 @@
                         </p>
                         <img src="/imagenes/perfil/sebaperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
+                <div class="w3-third">
+                    <a href="https://www.facebook.com/profile.php?id=100001907499058" class="quitar" target="_blank">
+                        <p>Seba
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </p>
+                        <img src="/imagenes/perfil/lucasperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                </div>
             </div>
-
-        </div>
-
-    </body>
-</html>
+        </body>
+    </html>
