--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -18,79 +18,75 @@
             <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Gastón en trompeta, Facundo en teclados, Leonel en el saxo alto, Sebastian en el saxo tenor y Lucas en la percusión.
             </p>
             <div class="w3-row w3-padding-32">
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
                         <p>Beto
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
-
                         <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank">
                         <p>Uri
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank">
                         <p>Gaston
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
-            </div>
-            <div class="w3-row w3-padding-32">
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank">
                         <p>Herni
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+            </div>
+            <div class="w3-row w3-padding-32">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
                         <p>Facu
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank">
                         <p>Romi
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
-            </div>
-
-            <div class="w3-row w3-padding-32">
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/carlosariel.mergen" class="quitar" target="_blank">
                         <p>Ariel
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/arielperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/leonel.lacazette.5" class="quitar" target="_blank">
                         <p>Leo
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/leoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
-                <div class="w3-third">
+            </div>
+            <div class="w3-row w3-padding-32">
+                <div class="w3-quarter">
                     <a href="https://www.facebook.com/SebaSV7" class="quitar" target="_blank">
                         <p>Seba
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/sebaperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
-                <br>
-                <br>
                 <div class="w3-row w3-padding-32">
-                    <div class="w3-third">
+                    <div class="w3-quarter">
                         <a href="https://www.facebook.com/profile.php?id=100001907499058" class="quitar" target="_blank">
                             <p>Lucas
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -99,5 +95,7 @@
                     </div>
                 </div>
             </div>
-        </body>
-    </html>
+        </div>
+
+    </body>
+</html>
